--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Scene/mini_morpion.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scene/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn")
-current_scene="res://Scene/main.tscn"
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn")
+current_scene="res://Scene/mini_morpion.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/main.gd"]
-selected_script="res://Scene/main.gd"
-open_help=[]
+open_scripts=["res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
+selected_script="res://Scene/mini_morpion.gd"
+open_help=["BaseButton", "Button"]
 script_split_offset=70
 list_split_offset=0
 
