--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,13 +13,13 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-363
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scene/mini_morpion.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scene/hud.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scene/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,18 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn")
-current_scene="res://Scene/mini_morpion.tscn"
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn", "res://Scene/case.tscn")
+current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
-selected_script="res://Scene/mini_morpion.gd"
-open_help=["BaseButton", "Button"]
+open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
+selected_script="res://Scene/Computer.gd"
+open_help=["Array", "BaseButton", "Button"]
 script_split_offset=70
 list_split_offset=0
 
