--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn", "res://Scene/case.tscn")
-current_scene="res://Scene/main.tscn"
+current_scene="res://Scene/hud.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
-selected_script="res://Scene/main.gd"
+selected_script="res://Script/HUD.gd"
 open_help=["Array", "BaseButton", "Button", "Timer"]
 script_split_offset=70
 list_split_offset=0
