--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
-selected_script="res://Script/Case.gd"
+selected_script="res://Scene/mini_morpion.gd"
 open_help=["Array", "BaseButton", "Button", "Timer"]
 script_split_offset=70
 list_split_offset=0
