--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn", "res://Scene/case.tscn")
-current_scene="res://Scene/case.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
+current_scene="res://Scene/main.tscn"
+center_split_offset=-286
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
-selected_script="res://Scene/mini_morpion.gd"
+selected_script="res://Scene/Computer.gd"
 open_help=["Array", "BaseButton", "Button", "Timer"]
 script_split_offset=70
 list_split_offset=0
