--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,32 +13,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-519
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scene/hud.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scene/")
+dock_filesystem_selected_paths=PackedStringArray("res://Theme/halloween_theme.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Theme/", "res://Theme/style_box/", "res://Font/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn", "res://Scene/case.tscn")
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/hud.tscn", "res://Scene/mini_morpion.tscn", "res://Scene/case.tscn", "res://Scene/options.tscn", "res://Scene/options_ui.tscn")
 current_scene="res://Scene/main.tscn"
-center_split_offset=-286
+center_split_offset=-383
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
-selected_script="res://Scene/Computer.gd"
-open_help=["Array", "BaseButton", "Button", "Timer"]
+open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/hud_general.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
+selected_script="res://Scene/main.gd"
+open_help=["Array", "BaseButton", "Button", "ColorRect", "Node", "Timer"]
 script_split_offset=70
 list_split_offset=0
 
