--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 79,
-"scroll_position": 6.0,
+"row": 145,
+"scroll_position": 129.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 24.0,
-"selection": false,
+"row": 60,
+"scroll_position": 50.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 60,
+"selection_to_column": 12,
+"selection_to_line": 60,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 59,
-"scroll_position": 117.0,
+"scroll_position": 101.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +63,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 42.0,
+"row": 55,
+"scroll_position": 29.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scene/hud_general.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 3.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 19,
+"selection_to_column": 5,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
