--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-519
+dock_hsplit_3=-404
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -32,13 +32,13 @@ current_scene="res://Scene/hud.tscn"
 center_split_offset=-383
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Script/Case.gd", "res://Scene/Computer.gd", "res://Script/HUD.gd", "res://Scene/hud_general.gd", "res://Scene/main.gd", "res://Scene/mini_morpion.gd"]
-selected_script="res://Scene/main.gd"
-open_help=["@GlobalScope", "Array", "BaseButton", "Button", "ColorRect", "Node", "Shortcut", "Timer"]
+selected_script="res://Scene/hud_general.gd"
+open_help=["@GlobalScope", "Array", "BaseButton", "Button", "ColorRect", "Container", "Control", "GridContainer", "Node", "Shortcut", "Timer"]
 script_split_offset=70
 list_split_offset=0
 
